fix: ping endpoint
